compose: Fix alignment of close buttons in stream invite banners.
Close buttons are misaligned if the warning banner text takes up two lines.

We increase the specificity of the selectors to ensure that this CSS
overrides Bootstrap.

Fixes #20839.

--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -276,12 +276,13 @@
     position: absolute;
 }
 
-.compose_resolved_topic_close,
-.compose_invite_close,
-.compose_private_stream_alert_close {
+.compose_resolved_topic_user_controls .compose_resolved_topic_close,
+.compose_invite_user_controls .compose_invite_close,
+.compose_private_stream_alert_controls .compose_private_stream_alert_close {
     display: inline-block;
-    margin-top: 4px;
-
+    position: absolute;
+    margin-top: -2px;
+    margin-right: -2px;
     width: 10px;
 }
 
